# vta-build-pipeline

./: .gitignore  AUDIT-TRAIL-REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.nitro  README.md  deny.toml  phase5-cutover.md  sealed-bootstrap.md
.cargo/: config.toml
.scripts/: build-and-upload.sh
cnm-cli/: Cargo.toml  README.md
cnm-cli/src/: audit.rs  auth.rs  backup.rs  config.rs  main.rs  setup.rs
didcomm-test/: Cargo.toml
docs/: README.md  bootstrap-provision-integration.md  cold-start-guide.md  design.md  did-templates.md  feature-flags.md  non-interactive-setup.md  (+1 more)
tests/e2e/: Cargo.toml
tests/e2e/tests/: client_didcomm.rs  mediator_smoke.rs  rollback_dispatch.rs  state_op_matrix.rs  transient_handshake.rs  tsp_ping_correlation.rs
tests/e2e/tests/common/: mod.rs  restart.rs  state_fixtures.rs  test_vta.rs
vta-cli-common/: Cargo.toml
vta-cli-common/src/: duration.rs  lib.rs  local_keygen.rs  render.rs  sealed_consumer.rs  sealed_producer.rs  secure_file.rs
vta-cli-common/src/commands/: acl.rs  audit.rs  contexts.rs  cred_vault.rs  credentials.rs  device.rs  did_templates.rs  keys.rs  mod.rs  services.rs  vault.rs  webvh.rs  webvh_edit.rs
vta-service/: CLAUDE.md  Cargo.toml
vta-service/src/: acl_cli.rs  acl_sweeper.rs  audit.rs  backup_bundle_store.rs  backup_bundle_sweeper.rs  bootstrap_cli.rs  config.rs  did_key.rs  did_peer.rs  did_templates.rs  did_webvh.rs  didcomm_bridge.rs  import_did.rs  keyspaces.rs  lib.rs  main.rs  seal.rs  sealed_nonce_store.rs  server.rs  services_cli.rs  setup.rs  status.rs  test_support.rs  vault_cli.rs  vault_sweeper.rs  webvh_auth.rs  webvh_cli.rs  webvh_client.rs  webvh_didcomm.rs  webvh_store.rs
vta-service/src/auth/: backend.rs  di_proof.rs  mod.rs
vta-service/src/contexts/: mod.rs
vta-service/src/keys/: derivation.rs  mod.rs  paths.rs  seed_store.rs  seeds.rs  wrapping.rs
vta-service/src/keys/seed_store/: keyring.rs  kms_tee.rs  mod.rs  plaintext.rs  vault.rs
vta-service/src/messaging/: auth.rs  drain_store.rs  drain_sweeper.rs  handlers.rs  handlers_protocol.rs  handshake.rs  live_prover.rs  mod.rs  registry.rs  router.rs  tsp_inbound.rs
vta-service/src/operations/: acl.rs  attestation.rs  audit.rs  backup.rs  cache.rs  contexts.rs  credential_exchange.rs  credentials.rs  device.rs  did_peer.rs  did_templates.rs  did_webvh.rs  export.rs  holder_keys.rs  keys.rs  memory.rs  mod.rs  passkey_login.rs  provision_integration.rs  seeds.rs  step_up.rs  step_up_approval.rs  step_up_policy.rs  vault.rs
vta-service/src/operations/backup/: blob.rs  descriptors.rs  mod.rs
vta-service/src/operations/did_webvh/: auth_cache.rs  concurrency.rs  document.rs  lifecycle.rs  mod.rs  register_server.rs  servers.rs  transport.rs  update.rs  webvh_keys.rs
vta-service/src/operations/did_webvh/update/: errors.rs  keys.rs  legacy.rs  mod.rs  options.rs  orchestrator.rs  plan.rs  rotate.rs  state.rs  validate.rs
vta-service/src/operations/passkey_vms/: errors.rs  mod.rs  multikey.rs
vta-service/src/operations/protocol/: disable_didcomm.rs  disable_rest.rs  disable_webauthn.rs  document.rs  drain_cancel.rs  enable_didcomm.rs  enable_rest.rs  enable_webauthn.rs  invariant.rs  list.rs  list_drain.rs  migrate_mediator.rs  mod.rs  passkey_vm_cleanup.rs  preconditions.rs  report.rs  rollback_didcomm.rs  rollback_rest.rs  rollback_webauthn.rs  runtime_state.rs  service_lifecycle.rs  snapshot.rs  update_didcomm.rs  update_rest.rs  update_webauthn.rs
vta-service/src/operations/provision_integration/: mint.rs  mod.rs  preconditions.rs  templates.rs  vta_keys.rs  webvh.rs
vta-service/src/operations/vault/: mod.rs  password_post.rs  proxy_login.rs  release.rs  sign_trust_task.rs  upsert.rs
vta-service/src/policy/: consent.rs  defaults.rs  effects.rs  engine.rs  input.rs  mod.rs  types.rs
vta-service/src/routes/: acl.rs  attestation.rs  audit.rs  auth.rs  backup.rs  backup_blob.rs  bootstrap.rs  cache.rs  capabilities.rs  config.rs  contexts.rs  did_templates.rs  did_webvh.rs  health.rs  keys.rs  mod.rs  passkey_vms.rs  protocol.rs  step_up.rs  trust_tasks.rs  vta.rs
vta-service/src/routes/auth_portal/: index.html  mod.rs
vta-service/src/routes/trust_tasks/: acl.rs  audit.rs  auth.rs  backup.rs  config.rs  contexts.rs  credential_exchange.rs  device.rs  did_templates.rs  discovery.rs  helpers.rs  keys.rs  management.rs  mod.rs  passkey_vms.rs  provision_integration.rs  seeds.rs  step_up.rs  step_up_policy.rs  vault.rs  webvh.rs
vta-service/src/setup/: from_toml.rs  interactive.rs
vta-service/src/tee/: admin_bootstrap.rs  anchor.rs  did_autogen.rs  kms_bootstrap.rs  mnemonic_guard.rs  mod.rs  nitro.rs  provider.rs  sev_snp.rs  simulated.rs  types.rs
vta-service/src/trust_tasks/: acl.rs  audit.rs  auth.rs  backup.rs  config.rs  consent.rs  consent_request.rs  contexts.rs  cred_vault.rs  credential_exchange.rs  credentials.rs  device.rs  did_templates.rs  discovery.rs  helpers.rs  keys.rs  management.rs  memory.rs  messaging.rs  mod.rs  passkey_vms.rs  planner.rs  policy_gate.rs  provision_integration.rs  seeds.rs  step_up.rs  step_up_policy.rs  task_consent.rs  vault.rs  webvh.rs  wire_v0_2.rs
vta-service/src/vault/: bbs.rs  consent.rs  di_verify.rs  index.rs  mint.rs  mod.rs  model.rs  present.rs  query.rs  receive.rs  status.rs  storage.rs
vta-service/tests/: api_integration.rs  app_state_single_construction.rs  auth_flow.rs  authenticate_trust_task.rs  delegated_consent_e2e.rs  mock_vta.rs  pending_presentation_trust_task.rs  provision_integration_provisionable.rs  refresh_trust_task.rs  security.rs  sessions_list_trust_task.rs  step_up_approve_response.rs  step_up_policy.rs  vault_consent.rs  vault_present.rs  vault_receive.rs  vault_trust_task.rs  whoami_trust_task.rs
vti-didcomm-roundtrip-helper/: Cargo.toml
vti-didcomm-roundtrip-helper/src/: main.rs
vti-webauthn/: Cargo.toml  README.md
vti-webauthn/src/: auth_data.rs  client_data.rs  config.rs  document_binding.rs  error.rs  lib.rs  multikey.rs  payload.rs  resolver.rs  verify.rs
vti-webauthn/tests/: verify_synthetic.rs
(+773 files in other folders)
