[package]
name = "cnm-cli"
description = "CLI Tool for Verified Trust Agents operating in Verified Trust Communities"
version = "0.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cnm"
path = "src/main.rs"

[features]
default = ["keyring"]
keyring = ["vta-sdk/keyring"]
config-session = ["vta-sdk/config-session"]
azure-secrets = ["vta-sdk/azure-secrets"]

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.5", features = ["session"] }
vta-cli-common = { path = "../vta-cli-common", version = "0.5" }
affinidi-did-resolver-cache-sdk = "0.8"
clap = { workspace = true, features = ["env"] }
dialoguer = { workspace = true }
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
