[package]
name = "vta-cli-common"
description = "Shared CLI command handlers and rendering helpers for VTA CLIs"
readme = "README.md"
version = "0.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.5", features = ["client", "sealed-transfer"] }
affinidi-crypto = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
multibase = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = "0.12"
aes-gcm = "0.10"
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
