[package]
name = "vta-service"
description = "Service for Verifiable Trust Agents operating in Verifiable Trust Communities"
version = "0.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["setup", "keyring", "rest", "didcomm"]
rest = []
didcomm = []
webvh = ["dep:didwebvh-rs", "dep:url", "dep:reqwest"]
setup = ["webvh", "dep:tempfile"]
keyring = ["dep:keyring"]
config-seed = []
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = [
  "dep:google-cloud-secretmanager-v1",
  "dep:google-cloud-auth",
  "dep:bytes",
]
azure-secrets = ["dep:azure_security_keyvault_secrets", "dep:azure_identity"]
tee = [
  "webvh",
  "dep:libc",
  "dep:aws-sdk-kms",
  "dep:aws-config",
  "dep:rsa",
  "dep:didwebvh-rs",
  "dep:cbc",
  "dep:aes",
]
vsock-store = ["vti-common/vsock-store"]

[lib]
name = "vta_service"
path = "src/lib.rs"

[[bin]]
name = "vta"
path = "src/main.rs"

[dependencies]
vti-common = { path = "../vti-common", version = "0.3", features = ["encryption"] }
vta-sdk = { path = "../vta-sdk", version = "0.5", features = ["didcomm", "sealed-transfer", "provision-integration"] }
affinidi-crypto = { workspace = true }
# Low-level `Secret` type for loading the VTA's signing key at
# provision time. Already transitively present via affinidi-tdk; made
# direct so `vta-service::operations::provision_integration` can name
# the type.
affinidi-secrets-resolver = { workspace = true }
hkdf = "0.12"
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm = "0.13"
affinidi-messaging-didcomm-service = { workspace = true }
async-trait = "0.1"
affinidi-tdk-common = "0.5"
affinidi-did-resolver-cache-sdk = { version = "0.8", features = ["network"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = { workspace = true }
axum = "0.8"
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = "1.0"
tower-http = { version = "0.6", features = ["trace", "limit"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = "2"
ed25519-dalek = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
hex = "0.4"
keyring = { version = "3", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { workspace = true }
azure_security_keyvault_secrets = { version = "0.12", optional = true }
azure_identity = { version = "0.33", optional = true }
sha1 = "0.10"
sha2 = { workspace = true }
cbc = { version = "0.1", optional = true }
aes = { version = "0.8", optional = true }
x25519-dalek = { workspace = true }
multibase = { workspace = true }
p256 = "0.13"
url = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }
libc = { version = "0.2", optional = true }
zeroize = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["limit"] }
# Per-IP rate limiting for unauthenticated endpoints (`/bootstrap/request`,
# `/auth/*`) so a flood of requests can't burn CPU on attestation / crypto.
tower_governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
aws-sdk-kms = { version = "1", optional = true }
rsa = { version = "0.9", optional = true, features = ["sha2"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
urlencoding = "2"
