[package]
name = "vti-webauthn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DID-VM-resolved WebAuthn assertion verifier for the Verifiable Trust Infrastructure."
readme = "README.md"

[dependencies]
# Async trait sugar for the VmResolver seam.
async-trait = "0.1"

# Workspace-hoisted deps.
base64 = { workspace = true }
multibase = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Crate-local deps.
aws-lc-rs = { workspace = true }                # ECDSA verification — workspace crypto policy.
p256 = "0.13"                                   # SEC1 point decompression ONLY (not signing or
                                                # verifying). aws-lc-rs requires uncompressed
                                                # points; Multikey carries compressed. Already
                                                # in the workspace dep tree transitively.
serde_json_canonicalizer = "0.3"                # RFC 8785 (author: Anders Rundgren).
unsigned-varint = "0.8"                         # multicodec varint prefix decode.

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
