[package]
name = "vti-e2e-tests"
version = "0.5.0"
description = "End-to-end integration tests for the VTI workspace (VTA + pnm + mediator + webvh)"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Test-only crate; never published.
publish = false

# No library or binary surface — this crate exists only for the
# `tests/` integration-test binaries below. Shared helpers live in
# `tests/common/mod.rs`, included by each test binary.
autobins = false

[dependencies]

[dev-dependencies]
# Embedded mediator fixture from affinidi-tdk-rs (unpublished — pulled
# via path through the workspace `[patch.crates-io]` redirect).
affinidi-messaging-test-mediator = { path = "../../../../affinidi/affinidi-tdk-rs/crates/messaging/affinidi-messaging-test-mediator" }

# VTA: enable the `test-support` feature so we can stand up complete VTA
# state (in-memory keyspaces, default `AppConfig`, bootstrap helpers)
# from outside the crate.
vta-service = { path = "../../vta-service", features = ["test-support", "didcomm", "webvh", "rest"] }
vta-sdk = { path = "../../vta-sdk", features = ["client", "didcomm", "session", "sealed-transfer", "provision-integration"] }
vti-common = { path = "../../vti-common" }

affinidi-tdk = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
affinidi-did-resolver-cache-sdk = { workspace = true }
affinidi-messaging-sdk = "0.17"

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
tempfile = "3"
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2"
# Test process needs to install a rustls `CryptoProvider` because both
# `rust_crypto` and `aws_lc_rs` end up in the feature graph (via
# transitive deps) and rustls won't auto-select.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
# Same story for `jsonwebtoken` — its own `CryptoProvider` is gated on
# matching mutually-exclusive features. The workspace pins
# `rust_crypto` (vti-common needs ed25519-dalek-backed JWT signing) and
# the test mediator pins `aws_lc_rs`; both end up on, so we install the
# provider explicitly at test startup. Either provider works at the
# call sites the test exercises; pick `aws_lc_rs` to match the mediator.
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }

[lints]
workspace = true
